--- a/StackdVersion1/UI/Cell/YoutubeTableViewCell.xib
+++ b/StackdVersion1/UI/Cell/YoutubeTableViewCell.xib
@@ -26,50 +26,76 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nge-7p-8CF" userLabel="Super Stack View">
                                     <rect key="frame" x="3" y="0.0" width="359" height="112"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="253" axis="vertical" distribution="fillProportionally" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="jfL-1z-OuR" userLabel="Left Stack View">
+                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="253" axis="vertical" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="jfL-1z-OuR" userLabel="Left Stack View">
                                             <rect key="frame" x="0.0" y="0.0" width="243.5" height="112"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="PQu-x4-ofJ">
-                                                    <rect key="frame" x="0.0" y="0.0" width="243.5" height="32"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="p89-tc-8d1">
+                                                    <rect key="frame" x="0.0" y="0.0" width="243.5" height="86.5"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="4Hf-06-QdO">
-                                                            <rect key="frame" x="0.0" y="0.0" width="152.5" height="32"/>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="PQu-x4-ofJ">
+                                                            <rect key="frame" x="0.0" y="0.0" width="243.5" height="24.5"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cci-8O-Duh">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
+                                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bwk-4l-Ciw">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="183" height="24.5"/>
+                                                                    <subviews>
+                                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="4Hf-06-QdO">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="115.5" height="24.5"/>
+                                                                            <subviews>
+                                                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cci-8O-Duh">
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="24.5" height="24.5"/>
+                                                                                    <constraints>
+                                                                                        <constraint firstAttribute="width" secondItem="cci-8O-Duh" secondAttribute="height" multiplier="1:1" id="Fxk-d9-Kft"/>
+                                                                                    </constraints>
+                                                                                </imageView>
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Shared from Source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1jY-um-yje">
+                                                                                    <rect key="frame" x="25.5" y="0.0" width="90" height="24.5"/>
+                                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                                    <nil key="textColor"/>
+                                                                                    <nil key="highlightedColor"/>
+                                                                                </label>
+                                                                            </subviews>
+                                                                        </stackView>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Duration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRz-Gi-DfY">
+                                                                            <rect key="frame" x="115.5" y="0.0" width="67.5" height="24.5"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" secondItem="cci-8O-Duh" secondAttribute="height" multiplier="1:1" id="Fxk-d9-Kft"/>
+                                                                        <constraint firstItem="CRz-Gi-DfY" firstAttribute="width" secondItem="1jY-um-yje" secondAttribute="width" multiplier="1.5:2" id="7Fj-Pc-7SL"/>
                                                                     </constraints>
-                                                                </imageView>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Shared from Source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1jY-um-yje">
-                                                                    <rect key="frame" x="33" y="0.0" width="119.5" height="32"/>
+                                                                </stackView>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="createdAt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GVy-Yf-iN4">
+                                                                    <rect key="frame" x="184" y="0.0" width="59.5" height="24.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                         </stackView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Duration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRz-Gi-DfY">
-                                                            <rect key="frame" x="153.5" y="0.0" width="90" height="32"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="adkhafsljiafdkljafdlkasdfjhdilasfhadislfhadlfhalsdhfasldhfalidsfhaldshfalkds" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhx-WB-MVm">
+                                                            <rect key="frame" x="0.0" y="25.5" width="243.5" height="61"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="CRz-Gi-DfY" firstAttribute="width" secondItem="1jY-um-yje" secondAttribute="width" multiplier="1.5:2" id="uLM-Zl-nMq"/>
+                                                        <constraint firstItem="PQu-x4-ofJ" firstAttribute="height" secondItem="p89-tc-8d1" secondAttribute="height" multiplier="1:3.5" id="acs-jV-9YY"/>
                                                     </constraints>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="adkhafsljiafdkljafdlkasdfjhdilasfhadislfhadlfhalsdhfasldhfalidsfhaldshfalkds" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhx-WB-MVm">
-                                                    <rect key="frame" x="0.0" y="47" width="243.5" height="65"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="imP-g5-hLz">
+                                                    <rect key="frame" x="0.0" y="88.5" width="243.5" height="23.5"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VeE-sw-4ps">
+                                                        <size key="itemSize" width="50" height="50"/>
+                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                    </collectionViewFlowLayout>
+                                                </collectionView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstItem="PQu-x4-ofJ" firstAttribute="height" secondItem="jfL-1z-OuR" secondAttribute="height" multiplier="1:3.5" id="v3h-Un-WB2"/>
-                                            </constraints>
                                         </stackView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="602-ON-RUw">
                                             <rect key="frame" x="253.5" y="0.0" width="105.5" height="112"/>
@@ -118,6 +144,8 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="collectionView" destination="imP-g5-hLz" id="Dnq-bT-iGz"/>
+                <outlet property="createdDate" destination="GVy-Yf-iN4" id="iG7-p5-GpE"/>
                 <outlet property="duration" destination="CRz-Gi-DfY" id="xjE-T8-Sql"/>
                 <outlet property="sourceImg" destination="hf6-Eu-WU8" id="eof-N6-N8g"/>
                 <outlet property="sourceLabel" destination="1jY-um-yje" id="jvl-CX-w8Y"/>
