--- a/StackdVersion1/UI/Cell/SharedTableViewCell.xib
+++ b/StackdVersion1/UI/Cell/SharedTableViewCell.xib
@@ -21,34 +21,40 @@
                     <rect key="frame" x="10" y="5" width="355" height="110"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <stackView contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="JVO-IW-Eqd">
+                <stackView contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="JVO-IW-Eqd">
                     <rect key="frame" x="8" y="5" width="359" height="110"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="tpq-9Q-SkH">
-                            <rect key="frame" x="0.0" y="0.0" width="359" height="37"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="tpq-9Q-SkH">
+                            <rect key="frame" x="0.0" y="0.0" width="359" height="34.5"/>
                             <subviews>
-                                <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jqZ-n9-VV2" userLabel="left Stack View">
-                                    <rect key="frame" x="0.0" y="0.0" width="202.5" height="37"/>
+                                <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="jqZ-n9-VV2" userLabel="left Stack View">
+                                    <rect key="frame" x="0.0" y="0.0" width="236.5" height="34.5"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="pUf-Pe-04y">
-                                            <rect key="frame" x="0.0" y="0.0" width="37" height="37"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="34.5" height="34.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="pUf-Pe-04y" secondAttribute="height" multiplier="1:1" id="HaT-P2-AN8"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shared from source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWX-rt-9qt">
-                                            <rect key="frame" x="47" y="0.0" width="155.5" height="37"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Shared from source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EWX-rt-9qt">
+                                            <rect key="frame" x="35.5" y="0.0" width="148" height="34.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Duration" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uz1-tm-6JH">
+                                            <rect key="frame" x="184.5" y="0.0" width="52" height="34.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7SN-mp-AbG" userLabel="right Stack View">
-                                    <rect key="frame" x="207.5" y="0.0" width="151.5" height="37"/>
+                                    <rect key="frame" x="256.5" y="0.0" width="102.5" height="34.5"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Duration" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uz1-tm-6JH">
-                                            <rect key="frame" x="0.0" y="0.0" width="151.5" height="37"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cNy-KI-pml">
+                                            <rect key="frame" x="0.0" y="0.0" width="102.5" height="34.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -58,19 +64,43 @@
                             </subviews>
                             <constraints>
                                 <constraint firstItem="jqZ-n9-VV2" firstAttribute="centerY" secondItem="tpq-9Q-SkH" secondAttribute="centerY" id="A7y-7x-MaV"/>
-                                <constraint firstItem="7SN-mp-AbG" firstAttribute="width" secondItem="jqZ-n9-VV2" secondAttribute="width" multiplier="1.5:2" id="fQj-Ly-xDO"/>
+                                <constraint firstItem="7SN-mp-AbG" firstAttribute="width" secondItem="jqZ-n9-VV2" secondAttribute="width" multiplier="1:2.3" id="fQj-Ly-xDO"/>
                             </constraints>
                         </stackView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="ahufadjafdljafdkljadfskljfadjkdfajsfhjadsfhajsdkfhalsdfhjadhfuowiehfilaehfilasdbhfkalsdhfaklsf" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vah-Fa-3CF">
-                            <rect key="frame" x="0.0" y="52" width="359" height="58"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Xv3-5c-dG6">
+                            <rect key="frame" x="0.0" y="36.5" width="359" height="41"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="ahufadjafdljafdkljadfskljfadjkdfajsfhjadsfhajsdkfhalsdfhjadhfuowiehfilaehfilasdbhfkalsdhfaklsf" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vah-Fa-3CF">
+                                    <rect key="frame" x="0.0" y="0.0" width="359" height="41"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="nbc-QW-HzW">
+                            <rect key="frame" x="0.0" y="79.5" width="359" height="30.5"/>
+                            <subviews>
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="hRN-sk-2eZ">
+                                    <rect key="frame" x="0.0" y="0.0" width="359" height="30.5"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Hit-c7-P97">
+                                        <size key="itemSize" width="50" height="50"/>
+                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </collectionViewFlowLayout>
+                                    <connections>
+                                        <outlet property="dataSource" destination="-1" id="igh-gA-gjc"/>
+                                        <outlet property="delegate" destination="-1" id="2Tl-zA-26E"/>
+                                    </connections>
+                                </collectionView>
+                            </subviews>
+                        </stackView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="tpq-9Q-SkH" firstAttribute="height" secondItem="JVO-IW-Eqd" secondAttribute="height" multiplier="1:3" id="oHu-ag-reY"/>
+                        <constraint firstItem="tpq-9Q-SkH" firstAttribute="height" secondItem="JVO-IW-Eqd" secondAttribute="height" multiplier="1:3.2" id="oHu-ag-reY"/>
                     </constraints>
                 </stackView>
             </subviews>
@@ -88,6 +118,8 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="collectionView" destination="hRN-sk-2eZ" id="Kd7-X5-ae1"/>
+                <outlet property="createdAt" destination="cNy-KI-pml" id="9ej-ga-KGc"/>
                 <outlet property="duration" destination="Uz1-tm-6JH" id="M6a-cX-wmh"/>
                 <outlet property="sourceLabel" destination="EWX-rt-9qt" id="1pW-co-7tW"/>
                 <outlet property="sourceLogo" destination="pUf-Pe-04y" id="hUf-UX-GG8"/>
