--- a/StackdVersion1/UI/Cell/YoutubeTableViewCell.xib
+++ b/StackdVersion1/UI/Cell/YoutubeTableViewCell.xib
@@ -14,41 +14,41 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="YoutubeTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="207"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="btS-au-JnJ">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="207"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="za6-Jn-RoW">
-                            <rect key="frame" x="5" y="4" width="365" height="112"/>
+                            <rect key="frame" x="5" y="4" width="375" height="199"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nge-7p-8CF" userLabel="Super Stack View">
-                                    <rect key="frame" x="3" y="0.0" width="359" height="112"/>
+                                    <rect key="frame" x="3" y="0.0" width="375" height="199"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="253" axis="vertical" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="jfL-1z-OuR" userLabel="Left Stack View">
-                                            <rect key="frame" x="0.0" y="0.0" width="243.5" height="112"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="253" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="jfL-1z-OuR" userLabel="Left Stack View">
+                                            <rect key="frame" x="0.0" y="0.0" width="261.5" height="199"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="p89-tc-8d1">
-                                                    <rect key="frame" x="0.0" y="0.0" width="243.5" height="86.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="261.5" height="179"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="PQu-x4-ofJ">
-                                                            <rect key="frame" x="0.0" y="0.0" width="243.5" height="24.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="261.5" height="51.5"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bwk-4l-Ciw">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="183" height="24.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="261.5" height="51.5"/>
                                                                     <subviews>
                                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="4Hf-06-QdO">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="115.5" height="24.5"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="150" height="51.5"/>
                                                                             <subviews>
                                                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cci-8O-Duh">
-                                                                                    <rect key="frame" x="0.0" y="0.0" width="24.5" height="24.5"/>
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="51.5" height="51.5"/>
                                                                                     <constraints>
                                                                                         <constraint firstAttribute="width" secondItem="cci-8O-Duh" secondAttribute="height" multiplier="1:1" id="Fxk-d9-Kft"/>
                                                                                     </constraints>
                                                                                 </imageView>
                                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Shared from Source" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1jY-um-yje">
-                                                                                    <rect key="frame" x="25.5" y="0.0" width="90" height="24.5"/>
+                                                                                    <rect key="frame" x="52.5" y="0.0" width="148.5" height="51.5"/>
                                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                                     <nil key="textColor"/>
                                                                                     <nil key="highlightedColor"/>
@@ -56,7 +56,7 @@
                                                                             </subviews>
                                                                         </stackView>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Duration" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CRz-Gi-DfY">
-                                                                            <rect key="frame" x="115.5" y="0.0" width="67.5" height="24.5"/>
+                                                                            <rect key="frame" x="147" y="0.0" width="111.5" height="51.5"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -67,7 +67,7 @@
                                                                     </constraints>
                                                                 </stackView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="createdAt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GVy-Yf-iN4">
-                                                                    <rect key="frame" x="184" y="0.0" width="59.5" height="24.5"/>
+                                                                    <rect key="frame" x="258.5" y="0.0" width="59.5" height="51.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -75,7 +75,7 @@
                                                             </subviews>
                                                         </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="adkhafsljiafdkljafdlkasdfjhdilasfhadislfhadlfhalsdhfasldhfalidsfhaldshfalkds" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhx-WB-MVm">
-                                                            <rect key="frame" x="0.0" y="25.5" width="243.5" height="61"/>
+                                                            <rect key="frame" x="0.0" y="52.5" width="261.5" height="126.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -85,23 +85,35 @@
                                                         <constraint firstItem="PQu-x4-ofJ" firstAttribute="height" secondItem="p89-tc-8d1" secondAttribute="height" multiplier="1:3.5" id="acs-jV-9YY"/>
                                                     </constraints>
                                                 </stackView>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="253" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="imP-g5-hLz">
-                                                    <rect key="frame" x="0.0" y="88.5" width="243.5" height="23.5"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VeE-sw-4ps">
-                                                        <size key="itemSize" width="50" height="50"/>
-                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                    </collectionViewFlowLayout>
-                                                </collectionView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="n7K-Uu-Vst">
+                                                    <rect key="frame" x="0.0" y="179" width="261.5" height="20"/>
+                                                    <subviews>
+                                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="253" verticalCompressionResistancePriority="1000" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="imP-g5-hLz">
+                                                            <rect key="frame" x="0.0" y="0.0" width="261.5" height="20"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="20" id="lej-ER-eXq"/>
+                                                            </constraints>
+                                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VeE-sw-4ps">
+                                                                <size key="itemSize" width="50" height="50"/>
+                                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                                <inset key="sectionInset" minX="0.0" minY="1" maxX="0.0" maxY="0.0"/>
+                                                            </collectionViewFlowLayout>
+                                                            <connections>
+                                                                <outlet property="dataSource" destination="-1" id="avr-2a-NKK"/>
+                                                                <outlet property="delegate" destination="-1" id="nSx-5C-5Qg"/>
+                                                            </connections>
+                                                        </collectionView>
+                                                    </subviews>
+                                                </stackView>
                                             </subviews>
                                         </stackView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="602-ON-RUw">
-                                            <rect key="frame" x="253.5" y="0.0" width="105.5" height="112"/>
+                                            <rect key="frame" x="258.5" y="0.0" width="113.5" height="199"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="hf6-Eu-WU8">
-                                                    <rect key="frame" x="0.0" y="0.0" width="105.5" height="112"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="113.5" height="199"/>
                                                 </imageView>
                                             </subviews>
                                         </stackView>
@@ -152,6 +164,7 @@
                 <outlet property="sourceLogo" destination="cci-8O-Duh" id="lKy-Zi-KUo"/>
                 <outlet property="sourceTitle" destination="zhx-WB-MVm" id="iQ8-bY-k3q"/>
             </connections>
+            <point key="canvasLocation" x="39.5" y="143.5"/>
         </view>
     </objects>
 </document>
